--- a/Views/Assignments/Index.cshtml
+++ b/Views/Assignments/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>List of Assignments</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New</a>
