Added search box

--- a/Views/Assignments/Index.cshtml
+++ b/Views/Assignments/Index.cshtml
@@ -6,6 +6,16 @@
 
 <h1>List of Assignments</h1>
 
+<form method="get">
+<div class="form-group">
+        <label for="search">Search Assignments</label>
+        
+<input type="text" class="form-control" id="search" name="title" placeholder="Search">
+
+    </div>
+
+
+</form>
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
