--- a/Views/Assignments/Edit.cshtml
+++ b/Views/Assignments/Edit.cshtml
@@ -30,7 +30,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <input asp-for="Type" class="form-control" />
+               <select asp-for="Type" class="form-control">
+  @foreach (var item in ViewBag.Categories)
+                     {
+                          <option value="@item">@item</option>
+                     }
+               </select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
            
@@ -42,7 +47,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+    <a asp-action="Index" class="btn btn-close-white">Back to List</a>
 </div>
 
 @section Scripts {
