fixed edit page

--- a/Views/Assignments/Edit.cshtml
+++ b/Views/Assignments/Edit.cshtml
@@ -47,7 +47,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" class="btn btn-close-white">Back to List</a>
+    <a asp-action="Index" class="btn btn-dark">Back to List</a>
 </div>
 
 @section Scripts {
