--- a/Views/Assignments/Index.cshtml
+++ b/Views/Assignments/Index.cshtml
@@ -6,6 +6,13 @@
 
 <h1>List of Assignments</h1>
 
+@if(TempData["Message"] != null)
+{
+    <div class="alert alert-success" role="alert">
+        @TempData["Message"]
+    </div>
+})
+
 <form method="get">
 <div class="form-group">
         <label for="search">Search Assignments</label>
