--- a/Views/Assignments/Index.cshtml
+++ b/Views/Assignments/Index.cshtml
@@ -43,7 +43,7 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DueDate)
+                Due Date
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Type)
