--- a/Views/Assignments/Index.cshtml
+++ b/Views/Assignments/Index.cshtml
@@ -23,6 +23,22 @@
     </div>
 
 
+    <div class="form-group">
+        <label>Sort by:</label>
+        <div class="form-check">
+            <input type="radio" class="form-check-input" id="SortByDateAsc" name="sortOrder" value="date_asc" @(ViewBag.CurrentSort == "date_asc" ? "checked" : "") />
+            <label class="form-check-label" for="SortByDateAsc">Date Ascending</label>
+        </div>
+        <div class="form-check">
+            <input type="radio" class="form-check-input" id="SortByDateDesc" name="sortOrder" value="date_desc" @(ViewBag.CurrentSort == "date_desc" ? "checked" : "") />
+            <label class="form-check-label" for="SortByDateDesc">Date Descending</label>
+        </div>
+
+        </div>
+
+<input type="submit" class="btn btn-primary" value="Apply"></input>
+
+
     
 
 
