--- a/Views/Assignments/Index.cshtml
+++ b/Views/Assignments/Index.cshtml
@@ -56,8 +56,10 @@
     </div>
 
         </div>
+        <br />
 
 <input type="submit" class="btn btn-primary" value="Apply"></input>
+
 
 
     
@@ -106,8 +108,8 @@
             </td>
             
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info">Details</a> |
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Edit</a> 
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info">Details</a> 
                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
             </td>
         </tr>
