changed input type from text to search

--- a/Views/Assignments/Index.cshtml
+++ b/Views/Assignments/Index.cshtml
@@ -17,7 +17,7 @@
 <div class="form-group">
         <label for="search">Search Assignments</label>
         
-<input type="text" class="form-control" id="search" name="title" placeholder="Search">
+<input type="search" class="form-control" id="search" name="title" placeholder="Search">
 
 
     </div>
