--- a/Views/Assignments/Index.cshtml
+++ b/Views/Assignments/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ToDo_Web_App.Models.Assignment>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Assignments' Dashboard";
 }
 
 <h1>List of Assignments</h1>
@@ -70,9 +70,11 @@
 <br />
 
 <form method="get">
-    <label for="cat">Show assignments for</label>
+   
 
+    <label for="cat">Filter by Category:</label>
     <select name="category" id="cat">
+
         
 <option value="">All Categories</option>
         @foreach(var category in ViewBag.Categories)
